--- a/themes/acorn/layout/_partial/header.ejs
+++ b/themes/acorn/layout/_partial/header.ejs
@@ -1,5 +1,5 @@
 <% if (is_home()) { %>
-	<header id="header" class="header header-absolute">
+	<header id="header" class="header header-fixed">
 <% } else {%>
 	<header class="header">
 <% } %>
